# gggears

./: .gitignore  .readthedocs.yaml  README.md  derivation.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: python-package.yml
docs/: requirements.txt
docs/source/: build123d_examples.rst  conf.py  examples.py  examples.rst  gggears.rst  index.rst  intro.rst  modules.rst
examples/: build123d_crescent_gearpump.py  build123d_example.py  examples.py  gear_animation.py  straight_tooth_bevel_hirth_thing.py
gui/: gggui.py
src/: examples.py  gggears_build123d.py  test.py  test_curve.py  test_gear.py  test_nurb.py  test_spherical.py
src/gggears/: __init__.py  curve.py  defs.py  function_generators.py  gearmath.py  gearteeth.py  gggearbuilder.py  gggears.py  gggears_base_classes.py  gggears_build123d.py  gggears_convert.py  gggears_core.py  gggears_wrapper.py  ruff.toml  test.py  test_curve.py  test_gear.py  test_spherical.py
tests/: test_02_misc_doc.py  test_03_gear.py  test_curve.py  test_gear.py
